# website-pf

./: .gitignore  CHANGELOG.md  README.md  coverage.xml  deploy.sh  package-lock.json  package.json  pyproject.toml  run.sh  serverless.yml  sonar-project.properties  test.sh
.github/workflows/: build.yml
backend/website-pf/: deploy.sh  pyproject.toml
backend/website-pf/src/website_pf_api/: app.py
backend/website-pf/src/website_pf_api/decorators/: basic_request_logging.py
backend/website-pf/src/website_pf_api/models/: post.py
backend/website-pf/src/website_pf_api/repositories/: mysql_repository.py
backend/website-pf/src/website_pf_api/services/: post_service.py
backend/website-pf/src/website_pf_api/utils/: utils.py
backend/website-pf/src/website_pf_post_loader/: app.py
backend/website-pf/src/website_pf_post_loader/repositories/: mysql_repository.py
backend/website-pf/src/website_pf_post_loader/services/: post_service.py
backend/website-pf/src/website_pf_post_loader/utils/: utils.py
backend/website-pf/tests/: test_mysql.py  test_post_loader.py  test_post_service.py
cloudformation/: pyproject.toml
cloudformation/website-pf/: deploy.sh
cloudformation/website-pf/resources/: post_upload_example.json
cloudformation/website-pf/src/website_pf_api/: app.py
cloudformation/website-pf/src/website_pf_api/models/: author.py
cloudformation/website-pf/src/website_pf_post_loader/utils/: utils.py
cloudformation/website-pf/tests/: __init__.py
config/: events.yml  local-example.yml  local.yml  prod-example.yml  prod.yml
documentation/: post-description.md  style-guide.md  website-pf-swagger.yml  website-pf.drawio
frontend/website-pf/: .env  deploy.sh  package-lock.json  package.json
frontend/website-pf/public/: manifest.json
frontend/website-pf/public/posts/pc-build-03-2016/: post.html
frontend/website-pf/public/posts/portfolio/: post.html
frontend/website-pf/src/: app.test.js  index.js
frontend/website-pf/src/js/: app.js
infrastructure/cloudformation/: pyproject.toml
infrastructure/cloudformation/src/: app.py  config.py  utils.py
infrastructure/cloudformation/src/website_pf_stack/: cloudfront.py  functions.py  iam.py  stack.py
lambda-backend/: package-lock.json  package.json
lambda-backend/src/: app.js
lambda-backend/src/modules/: workermodule.js
lambda-backend/website-pf/: requirements.txt
lambda-backend/website-pf/src/: app.py
lambda-backend/website-pf/src/repositories/: mysql_repository.py
lambda-backend/website-pf/src/services/: post_service.py
lambda_backend/website_pf/: app.py
lambda_backend/website_pf/src/: app.py  config.py
lambda_backend/website_pf/src/decorators/: basic_request_logging.py
lambda_backend/website_pf/src/models/: post.py
lambda_backend/website_pf/src/repositories/: mysql_repository.py
lambda_backend/website_pf/src/services/: post_service.py
lambda_backend/website_pf/src/utils/: parameters.py  utils.py
lambda_backend/website_pf/tests/: test_mysql.py  test_post_service.py
lambda_backend/website_pf_post_loader/: app.py  config.py
lambda_backend/website_pf_post_loader/resources/: config-template.yml
lambda_backend/website_pf_post_loader/src/: app.py  config.py
lambda_backend/website_pf_post_loader/src/repositories/: mysql_repository.py
lambda_backend/website_pf_post_loader/src/services/: post_service.py
lambda_backend/website_pf_post_loader/src/utils/: utils.py
lambda_backend/website_pf_post_loader/tests/: test_post_loader.py
public/: index.html
rds-mysql-db/: website-pf-base.sql
s3-webapp/: .env  .env-example  .env.development  package-lock.json  package.json
s3-webapp/public/: featured.yml  index.html  robots.txt  sitemap.xml
s3-webapp/src/: index.js
s3-webapp/src/css/: app.css
s3-webapp/src/js/: app.js  footer.js  home.js  navbar.js  post-list.js  post.js  search.js  tags.js  utils.js
s3-webapp/src/js/common/: 404.js  common-modal.js  common-post.js  footer.js  home.js  navbar.js  post.js  tags.js
scripts/: create-webapp-config.py  post-handler.py
serverless/website-pf/: deploy.sh  pyproject.toml  serverless.yml
serverless/website-pf/lambda_functions/website_pf/src/: config.py
serverless/website-pf/lambda_functions/website_pf/tests/: test_post_service.py
serverless/website-pf/lambda_functions/website_pf_post_loader/src/: app.py
serverless/website-pf/lambda_functions/website_pf_post_loader/src/repositories/: mysql_repository.py
serverless/website-pf/lambda_functions/website_pf_post_loader/src/services/: post_service.py
src/: index.js
src/css/: app.css
src/js/: app.js
src/js/common/: footer.js  navbar.js  sidebar.js
webapp/website-pf/: deploy.sh  package-lock.json  package.json
webapp/website-pf/public/: index.html  rss.xml
webapp/website-pf/src/js/: common-modal.js  common-post.js  navbar.js  post.js  tags.js  utils.js
