[tool.poetry]
name = "website-react-pf"
version = "0.6.0"
description = "Website-PF Application"
authors = ["Preston Frazier <preston@prestonfrazier.net>"]

[tool.poetry.dependencies]
python = "^3.8"
werkzeug = "2.2.2"
Flask = "2.2.2"
Flask-Cors = "3.0.10"
jsonpickle = "1.4.1"
mysql-connector-python = "8.0.21"
"ruamel.yaml" = "0.16.12"
PyJWT = "^1.7.1"
pytz = "^2021.1"
python-json-logger = "2.0.2"

[tool.poetry.dev-dependencies]
boto3 = "^1.16.9"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "lambda_backend/website_pf/tests",
    "lambda_backend/website_pf_post_loader/tests",
]

[tool.coverage.run]
branch = true
source = ["lambda_backend/website_pf/src/*", "lambda_backend/website_pf_post_loader/src/*"]
omit = ["lambda_backend/website_pf/tests/*","lambda_backend/website_pf_post_loader/tests/*", "*__init.py__*"]
relative_files = false

[tool.coverage.xml]
output = "coverage.xml"
