[tool.poetry]
name = "website-react-pf"
version = "0.8.0"
description = "Website-PF Application"
authors = ["Preston Frazier <preston@prestonfrazier.net>"]

[tool.poetry.dependencies]
python = "~3.11"
werkzeug = "3.0.1"
Flask = "3.0.0"
Flask-Cors = "3.0.10"
jsonpickle = "3.0.1"
mysql-connector-python = "8.0.33"
"ruamel.yaml" = "0.17.26"
pytz = "2023.3"
python-json-logger = "2.0.7"

[tool.poetry.dev-dependencies]
boto3 = "1.29.2"
pytest = "7.4.3"
pytest-cov = "4.1.0"
coverage = {extras = ["toml"], version = "7.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "lambda_backend/website_pf/tests",
    "lambda_backend/website_pf_post_loader/tests",
]

[tool.coverage.run]
branch = true
source = [
    "lambda_backend/website_pf/src/*",
    "lambda_backend/website_pf_post_loader/src/*"
]
omit = [
    "lambda_backend/website_pf/tests/*",
    "lambda_backend/website_pf_post_loader/tests/*", 
    "*__init.__*"
]
relative_files = false

[tool.coverage.xml]
output = "coverage.xml"
