[tool.poetry]
name = "website-react-pf"
version = "1.0.0"
description = "website-react-pf application"
authors = [
    "Preston Frazier <preston@prestonfrazier.net>"
]
packages = [
   { include = "scripts" }
]

[tool.poetry.dependencies]
python = "~3.13"
boto3 = "1.42.45"
"ruamel.yaml" = "0.18.6"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
coverage = {extras = ["toml"], version = "7.6.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term --cov-report xml"
log_cli = true
log_cli_level = "WARNING"
testpaths = [
    "lambda_functions/*/tests"
]

[tool.coverage.run]
branch = true
include = [
    "lambda_functions/*/src/*"
]
omit = [
    "*/tests/*",
    "*__init.__*"
]

[tool.coverage.xml]
output = "coverage.xml"
